# GD32VF103-Projects

./: .gitignore  Cargo.toml  README.md  debug.gdb  dfu-util
.cargo/: config
blinky/: Cargo.toml  Makefile.toml
blinky/.cargo/: config
blinky/src/: main.rs
