[package]
name = "longan-nano"
version = "0.1.0"
authors = ["Yusef Karim <yusefkarim@riseup.net>"]
edition = "2018"

[dependencies]
# Provides startup code and useful attributes
# https://docs.rs/riscv-rt/0.8.0/riscv_rt/index.html
riscv-rt = "0.8"
# Set the panicking behavior to halt the CPU
# https://docs.rs/crate/panic-halt/0.2.0
panic-halt = "0.2.0"
# Provides low-level access to registers and assembly instructions
# https://docs.rs/riscv/0.6.0/riscv/index.html
riscv = "0.6"
# Peripheral access API for GD32VF103
# https://docs.rs/gd32vf103-pac/0.4.0/gd32vf103_pac/index.html
gd32vf103-pac = {version = "0.4", features = ["rt"]}
